fix(shared): update package.json to set private field correctly

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@logtracker/shared",
   "version": "1.0.0",
-  "description": "",
+  "private": false,
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
