--- a/packages/ingest-api/package.json
+++ b/packages/ingest-api/package.json
@@ -15,6 +15,7 @@
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
         "bullmq": "^5.66.4",
+        "dotenv": "^17.2.3",
         "ioredis": "^5.8.2",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1"
