--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -12,7 +12,10 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "bullmq": "^5.66.4",
+    "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
-    "reflect-metadata": "^0.2.2"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.28"
   }
 }
