--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "@logtracker/shared",
-  "version": "1.0.0",
-  "private": false,
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w",
-    "lint": "eslint ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.17.1",
-  "dependencies": {
-    "zod": "^4.2.1"
-  }
+    "name": "@logtracker/shared",
+    "version": "1.0.0",
+    "private": false,
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "build": "tsc -p tsconfig.json",
+        "dev": "tsc -w",
+        "lint": "eslint ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "packageManager": "pnpm@10.17.1",
+    "dependencies": {
+        "typeorm": "^0.3.28",
+        "zod": "^4.2.1"
+    }
 }
