--- a/packages/ingest-api/package.json
+++ b/packages/ingest-api/package.json
@@ -17,8 +17,10 @@
         "bullmq": "^5.66.4",
         "dotenv": "^17.2.3",
         "ioredis": "^5.8.2",
+        "pg": "^8.16.3",
         "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "typeorm": "^0.3.28"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.0",
