--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,6 +14,8 @@
     "license": "ISC",
     "packageManager": "pnpm@10.17.1",
     "dependencies": {
+        "bullmq": "^5.66.4",
+        "ioredis": "^5.8.2",
         "typeorm": "^0.3.28",
         "zod": "^4.2.1"
     }
