--- a/packages/ingest-api/package.json
+++ b/packages/ingest-api/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node dist/main.js",
-        "start:dev": "nest start --watch",
-        "build": "nest build"
+        "start:dev": "npx nest start --watch",
+        "build": "npx nest build"
     },
     "dependencies": {
         "@logtracker/shared": "workspace:*",
