--- a/packages/ingest-api/package.json
+++ b/packages/ingest-api/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@logtracker/shared": "workspace:*",
+        "@logtracker/core": "workspace:*",
         "@nestjs/common": "^11.0.1",
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
