fix(sdk): update dependency references from @logtracker/shared to @logtracker/core

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,6 +11,6 @@
         "lint": "eslint ."
     },
     "dependencies": {
-        "@logtracker/shared": "workspace:*"
+        "@logtracker/core": "workspace:*"
     }
 }
