--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,6 +17,7 @@
         "bullmq": "^5.66.4",
         "ioredis": "^5.8.2",
         "typeorm": "^0.3.28",
-        "zod": "^4.2.1"
+        "zod": "^4.2.1",
+        "@logtracker/core": "workspace:*"
     }
 }
