--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@logtracker/shared": "workspace:*",
+        "@logtracker/core": "workspace:*",
         "@nestjs/common": "^11.0.1",
         "@nestjs/core": "^11.0.1",
         "bullmq": "^5.66.4",
