fix(admin-api): restore version number to 0.1.0 in package.json

--- a/packages/admin-api/package.json
+++ b/packages/admin-api/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@logtracker/admin-api",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
         "dev": "ts-node src/main.ts",
