feat(repo): add baseUrl and paths for module resolution

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,11 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@logtracker/shared": ["packages/shared/src"],
+      "@logtracker/core": ["packages/core/src"]
+    }
   }
 }
